fix fieldset spacing on mobile

--- a/src/scss/partials/_form.scss
+++ b/src/scss/partials/_form.scss
@@ -3,7 +3,8 @@
 
   &__fieldset {
     border: none;
-    padding: 20px 0 0 0;
+    margin: 20px 0 0 0;
+    padding: 0;
   }
 
   &__fieldset-title {
